--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .ipynb_checkpoints/VTB_broker_report-checkpoint.ipynb
 example_1.db
 .ipynb_checkpoints/VTB_broker_report-checkpoint.ipynb
+.ipynb_checkpoints/VTB_broker_report-checkpoint.ipynb
