--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 example_1.db
 .ipynb_checkpoints/VTB_broker_report-checkpoint.ipynb
 .ipynb_checkpoints/VTB_broker_report-checkpoint.ipynb
+*.ipynb
+.ipynb_checkpoints/GDC-checkpoint.ipynb
